--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,17 @@
 {
-    "name": "rnix/laravel-redis-batch-repository",
+    "name": "mrpackage/laravel-redis-batch-repository",
     "description": "Provides redis repository implementation for Laravel Queue Batch",
     "type": "library",
     "license": "MIT",
     "authors": [
-        {
-            "name": "Roman Nix",
-            "email": "rnix@yandex.ru"
-        }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/bus": "~8.0|~9.0",
-        "nesbot/carbon": "^2.31"
+        "php": "^8.0 || ^8.2 || ^8.3 || ^8.4",
+        "laravel/framework": ">=8.0",
+        "nesbot/carbon": "^2.31 || ^3.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3",
+        "phpunit/phpunit": "^9.3 || ^10.0",
         "orchestra/testbench": "^6.0",
         "predis/predis": "^1.1",
         "friendsofphp/php-cs-fixer": "^3.1"
